--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ava |Home</title>
     <link rel="stylesheet" href="dist/css/style.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -69,22 +69,22 @@
                         truly satisfied is to do what you believe is great work. And the only way to do great work is to
                         love what you do."</div>
                     <div class="home__pricing">
-                        <img src="src/img/price.png" alt="">
+                        <img src="dist/img/price.png" alt="">
                         <div class="home__pricing_text">
                             <p>Samantha Norton</p>
                             <div class="home__pricing__stars">
-                                <img src="src/img/star.svg" alt="">
-                                <img src="src/img/star.svg" alt="">
-                                <img src="src/img/star.svg" alt="">
-                                <img src="src/img/star.svg" alt="">
-                                <img src="src/img/star.svg" alt="">
+                                <img src="dist/img/star.svg" alt="">
+                                <img src="dist/img/star.svg" alt="">
+                                <img src="dist/img/star.svg" alt="">
+                                <img src="dist/img/star.svg" alt="">
+                                <img src="dist/img/star.svg" alt="">
                             </div>
                         </div>
                     </div>
                     <a href="#" class="home__btn">Get started now</a>
                 </div>
                 <div class="home__box2">
-                    <img src="src/img/homeBG.png" alt="">
+                    <img src="dist/img/homeBG.png" alt="">
                 </div>
             </div>
         </div>
@@ -103,11 +103,11 @@
         <div class="technology__photo" id="photose">
             <div class="container">
                 <div class="tecnology__photos">
-                    <img src="src/img/bg.png" class="bg1" alt="">
+                    <img src="dist/img/bg.png" class="bg1" alt="">
                 </div>
             </div>
-            <img src="src/img/leftbg.png" class="left" alt="">
-            <img src="src/img/rightbg.png" class="right" alt="">
+            <img src="dist/img/leftbg.png" class="left" alt="">
+            <img src="dist/img/rightbg.png" class="right" alt="">
         </div>
         <div class="container">
             <a href="#" class="more">more about us</a>
@@ -143,9 +143,9 @@
                     </div>
                 </div>
                 <div class="brand__forms">
-                    <img src="src/img/formsbgleft.png" class="formsright" alt="">
-                    <img src="src/img/formsbg.png" class="formsleft" alt="">
-                    <img src="src/img/formphoto.png" class="brand__title" alt="">
+                    <img src="dist/img/formsbgleft.png" class="formsright" alt="">
+                    <img src="dist/img/formsbg.png" class="formsleft" alt="">
+                    <img src="dist/img/formphoto.png" class="brand__title" alt="">
                     <div class="brand__subtext">Get in touch of the world</div>
                     <div class="brand__description">Your work is going to fill a large part of your life, and the only
                         way to be truly satisfied.
@@ -172,7 +172,7 @@
         <div class="container">
             <div class="question">
                 <div class="question__img">
-                    <img src="src/img/question.png" alt="">
+                    <img src="dist/img/question.png" alt="">
                 </div>
                 <div class="question__item">
                     <div class="question__title">
@@ -185,19 +185,19 @@
                     <div class="question__box">
                         <div class="question__box-question">
                             Do you provide customer support?
-                            <a href="#"><img src="src/img/plus.svg" alt=""></a>
+                            <a href="#"><img src="dist/img/plus.svg" alt=""></a>
                         </div>
                         <div class="question__box-question">
                             How much traffic can the hosting handle?
-                            <a href="#"><img src="src/img/plus.svg" alt=""></a>
+                            <a href="#"><img src="dist/img/plus.svg" alt=""></a>
                         </div>
                         <div class="question__box-question">
                             Do you have any questions for us?
-                            <a href="#"><img src="src/img/plus.svg" alt=""></a>
+                            <a href="#"><img src="dist/img/plus.svg" alt=""></a>
                         </div>
                         <div class="question__box-question">
                             What is your return policy?
-                            <a href="#"><img src="src/img/plus.svg" alt=""></a>
+                            <a href="#"><img src="dist/img/plus.svg" alt=""></a>
                         </div>
                     </div>
 
@@ -279,11 +279,11 @@
                         <div class="feedback__name">Martin Eduard</div>
                         <div class="feedback__job">CEO of Marketing</div>
                         <div class="feedback__stars">
-                            <img src="src/img/star.svg" alt="">
-                            <img src="src/img/star.svg" alt="">
-                            <img src="src/img/star.svg" alt="">
-                            <img src="src/img/star.svg" alt="">
-                            <img src="src/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
                         </div>
                     </div>
                     <div class="swiper-slide">
@@ -295,11 +295,11 @@
                         <div class="feedback__name">Jack Michael</div>
                         <div class="feedback__job">Salesman</div>
                         <div class="feedback__stars">
-                            <img src="src/img/star.svg" alt="">
-                            <img src="src/img/star.svg" alt="">
-                            <img src="src/img/star.svg" alt="">
-                            <img src="src/img/star.svg" alt="">
-                            <img src="src/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
                         </div>
                     </div>
                     <div class="swiper-slide">
@@ -311,11 +311,11 @@
                         <div class="feedback__name">Lucy Joseph</div>
                         <div class="feedback__job">Sales Manager</div>
                         <div class="feedback__stars">
-                            <img src="src/img/star.svg" alt="">
-                            <img src="src/img/star.svg" alt="">
-                            <img src="src/img/star.svg" alt="">
-                            <img src="src/img/star.svg" alt="">
-                            <img src="src/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
                         </div>
                     </div>
                     <div class="swiper-slide">
@@ -343,11 +343,11 @@
                         <div class="feedback__name">Martin Eduard</div>
                         <div class="feedback__job">CEO of Marketing</div>
                         <div class="feedback__stars">
-                            <img src="src/img/star.svg" alt="">
-                            <img src="src/img/star.svg" alt="">
-                            <img src="src/img/star.svg" alt="">
-                            <img src="src/img/star.svg" alt="">
-                            <img src="src/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
                         </div>
                     </div>
                     <div class="swiper-slide">
@@ -359,11 +359,11 @@
                         <div class="feedback__name">Martin Eduard</div>
                         <div class="feedback__job">CEO of Marketing</div>
                         <div class="feedback__stars">
-                            <img src="src/img/star.svg" alt="">
-                            <img src="src/img/star.svg" alt="">
-                            <img src="src/img/star.svg" alt="">
-                            <img src="src/img/star.svg" alt="">
-                            <img src="src/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
                         </div>
                     </div>
                     <div class="swiper-slide">
@@ -375,11 +375,11 @@
                         <div class="feedback__name">Martin Eduard</div>
                         <div class="feedback__job">CEO of Marketing</div>
                         <div class="feedback__stars">
-                            <img src="src/img/star.svg" alt="">
-                            <img src="src/img/star.svg" alt="">
-                            <img src="src/img/star.svg" alt="">
-                            <img src="src/img/star.svg" alt="">
-                            <img src="src/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
+                            <img src="dist/img/star.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -391,7 +391,7 @@
     <section class="section__team">
         <div class="container">
             <div class="team">
-                <img src="src/img/bgteam.png" alt="">
+                <img src="dist/img/bgteam.png" alt="">
                 <div class="team__item">
                     <div class="team__title">an unique marketing template</div>
                     <div class="team__subtext">"Any strategy that gets a message to rise above the clutter is terrific
@@ -407,12 +407,12 @@
         <div class="container">
             <div class="company">
                 <div class="copmany__item">
-                    <img src="src/img/sordic.png" alt="">
-                    <img src="src/img/oprah.png" alt="">
-                    <img src="src/img/mattlab.png" alt="">
-                    <img src="src/img/together.png" alt="">
-                    <img src="src/img/codeflame.png" alt="">
-                    <img src="src/img/modus.png" alt="">
+                    <img src="dist/img/sordic.png" alt="">
+                    <img src="dist/img/oprah.png" alt="">
+                    <img src="dist/img/mattlab.png" alt="">
+                    <img src="dist/img/together.png" alt="">
+                    <img src="dist/img/codeflame.png" alt="">
+                    <img src="dist/img/modus.png" alt="">
                 </div>
             </div>
         </div>
@@ -430,7 +430,7 @@
                 <div class="news__boxs">
                     <div class="news__box1">
                         <div class="news__design">
-                            <img src="src/img/design.png" class="photonews" alt="">
+                            <img src="dist/img/design.png" class="photonews" alt="">
                             <div class="news__design-item">
                                 <div class="news__design-item-title">
                                     DESIGN
@@ -441,7 +441,7 @@
                             </div>
                         </div>
                         <div class="news__design">
-                            <img src="src/img/tutorial.png" class="photonews" alt="">
+                            <img src="dist/img/tutorial.png" class="photonews" alt="">
                             <div class="news__design-item">
                                 <div class="news__design-item-title">
                                     DESIGN
@@ -453,7 +453,7 @@
                         </div>
                     </div>
                     <div class="news__box2">
-                        <img src="src/img/marketingNews.png" alt="">
+                        <img src="dist/img/marketingNews.png" alt="">
                         <div class="news__marketing_title">MARKETING
                             <h1>What Will Website Be Like In 100 Years?</h1>
                         </div>
