--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
     <nav>
         <div class="container">
-            <a href="#" class="logoMedia"><img src="src/img/logo.png" alt=""></a>
+            <a href="#" class="logoMedia"><img src="dist/img/logo.png" alt=""></a>
 
             <ul class="nav-links">
-                <a href="#" class="logo"><img src="src/img/logo.png" alt=""></a>
+                <a href="#" class="logo"><img src="dist/img/logo.png" alt=""></a>
 
                 <li class="listLi">
                     <a href="#" class="linksNav">Home</a>
@@ -128,12 +128,12 @@
                     </div>
                     <div class="brand__supports">
                         <div class="brand__customer">
-                            <div class="brand__photo"><img src="src/img/support.svg" alt=""></div>
+                            <div class="brand__photo"><img src="dist/img/support.svg" alt=""></div>
                             <div class="brand__title">Customer Support</div>
                             <div class="brand__subtext">Make every detail perfect & limit the number of details.</div>
                         </div>
                         <div class="brand__customer">
-                            <div class="brand__photo"><img src="src/img/marketing.svg" alt=""></div>
+                            <div class="brand__photo"><img src="dist/img/marketing.svg" alt=""></div>
                             <div class="brand__title">Email marketing</div>
                             <div class="brand__subtext">Make every detail perfect & limit the number of details.</div>
                         </div>
