--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
         <div class="container">
             <div class="footer__item">
                 <div class="footer__links">
-                    <a href="#"><img src="src/img/footerlogo.png" alt=""></a>
+                    <a href="#"><img src="dist/img/footerlogo.png" alt=""></a>
                     <div class="footer__links">
                         <a href="#">Style-guide</a>
                         <a href="#">Licenses</a>
