--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                     </div>
                 </div>
                 <div class="marketing__price">
-                    <img src="src/img/marketingprice.png" class="marketing__price-title">
+                    <img src="dist/img/marketingprice.png" class="marketing__price-title">
                     <div class="marketing__price-subtext">$45.00</div>
                     <div class="marketing__price-description">Per month</div>
                     <ul class="marketing__price-lists">
@@ -275,7 +275,7 @@
                             "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
                             elementum tristique. "
                         </div>
-                        <div class="feedback__photo"><img src="src/img/slide1.png" alt=""></div>
+                        <div class="feedback__photo"><img src="dist/img/slide1.png" alt=""></div>
                         <div class="feedback__name">Martin Eduard</div>
                         <div class="feedback__job">CEO of Marketing</div>
                         <div class="feedback__stars">
@@ -291,7 +291,7 @@
                             "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
                             elementum tristique. "
                         </div>
-                        <div class="feedback__photo"><img src="src/img/slide2.png" alt=""></div>
+                        <div class="feedback__photo"><img src="dist/img/slide2.png" alt=""></div>
                         <div class="feedback__name">Jack Michael</div>
                         <div class="feedback__job">Salesman</div>
                         <div class="feedback__stars">
@@ -307,7 +307,7 @@
                             "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
                             elementum tristique. "
                         </div>
-                        <div class="feedback__photo"><img src="src/img/slide3.png" alt=""></div>
+                        <div class="feedback__photo"><img src="dist/img/slide3.png" alt=""></div>
                         <div class="feedback__name">Lucy Joseph</div>
                         <div class="feedback__job">Sales Manager</div>
                         <div class="feedback__stars">
@@ -323,7 +323,7 @@
                             "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
                             elementum tristique. "
                         </div>
-                        <div class="feedback__photo"><img src="src/img/slide1.png" alt=""></div>
+                        <div class="feedback__photo"><img src="dist/img/slide1.png" alt=""></div>
                         <div class="feedback__name">Martin Eduard</div>
                         <div class="feedback__job">CEO of Marketing</div>
                         <div class="feedback__stars">
@@ -339,7 +339,7 @@
                             "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
                             elementum tristique. "
                         </div>
-                        <div class="feedback__photo"><img src="src/img/slide1.png" alt=""></div>
+                        <div class="feedback__photo"><img src="dist/img/slide1.png" alt=""></div>
                         <div class="feedback__name">Martin Eduard</div>
                         <div class="feedback__job">CEO of Marketing</div>
                         <div class="feedback__stars">
@@ -355,7 +355,7 @@
                             "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
                             elementum tristique. "
                         </div>
-                        <div class="feedback__photo"><img src="src/img/slide1.png" alt=""></div>
+                        <div class="feedback__photo"><img src="dist/img/slide1.png" alt=""></div>
                         <div class="feedback__name">Martin Eduard</div>
                         <div class="feedback__job">CEO of Marketing</div>
                         <div class="feedback__stars">
@@ -371,7 +371,7 @@
                             "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
                             elementum tristique. "
                         </div>
-                        <div class="feedback__photo"><img src="src/img/slide1.png" alt=""></div>
+                        <div class="feedback__photo"><img src="dist/img/slide1.png" alt=""></div>
                         <div class="feedback__name">Martin Eduard</div>
                         <div class="feedback__job">CEO of Marketing</div>
                         <div class="feedback__stars">
